build changed to run from jar